--- a/css/main.css
+++ b/css/main.css
@@ -507,7 +507,7 @@ img {
 
 @media screen and (max-width: 1199px) {
   .header-contacts__link--email {
-    padding-top: 21px;
+    padding-top: 18px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -589,7 +589,6 @@ img {
     overflow-y: scroll;
   }
 }
-
 @media screen and (max-width: 767px) {
   .header-mobile.is-open {
     -webkit-transform: translateX(100%);
@@ -597,7 +596,7 @@ img {
   }
 }
 
-.mobile__social-list {
+.header-mobile .mobile__social-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -608,7 +607,7 @@ img {
   row-gap: 20px;
 }
 @media screen and (min-width: 768px) {
-  .mobile__social-list {
+  .header-mobile .mobile__social-list {
     display: none;
   }
 }
@@ -617,6 +616,15 @@ img {
   position: relative;
   margin-top: auto;
   margin-bottom: auto;
+}
+.mobile__social-item:not(:last-child):after {
+  display: inline-block;
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 1px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  background-color: var(--white);
 }
 
 .mobile__social-link {
@@ -632,16 +640,6 @@ img {
   .mobile__social-link {
     font-size: 15px;
   }
-}
-
-.mobile__social-item:not(:last-child):after {
-  display: inline-block;
-  position: absolute;
-  content: "";
-  height: 22px;
-  width: 1px;
-  border: 1px solid rgba 33, 33, 33, 0.2;
-  background-color: var(--white);
 }
 
 .mobile-menu {
@@ -835,49 +833,68 @@ img {
 }
 
 .buisness {
-  padding-top: 0;
+  display: none;
 }
-.buisness-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 50px;
-}
-.buisness-list__item {
-  position: relative;
-}
-.buisness-list__lable {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: absolute;
-  background-color: rgba(47, 48, 58, 0.8);
-  color: #fff;
-  width: 100%;
-  height: 24%;
-  bottom: 0;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media screen and (min-width: 1200px) {
+  .buisness {
+    display: block;
+    padding-top: 0;
+  }
+  .buisness-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 50px;
+  }
+  .buisness-list__item {
+    position: relative;
+  }
+  .buisness-list__lable {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    background-color: rgba(47, 48, 58, 0.8);
+    color: #fff;
+    width: 100%;
+    height: 24%;
+    bottom: 0;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .team {
   background-color: var(--teem-bg);
 }
-.team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 50px;
-  gap: 30px;
+@media screen and (max-width: 1199px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 50px;
+    gap: 30px;
+  }
 }
 .team-item {
   background-color: var(--white);
