--- a/sass/components/_buisness.scss
+++ b/sass/components/_buisness.scss
@@ -1,4 +1,7 @@
 .buisness {
+    display: none;
+    @media screen and (min-width: 1200px) {
+        display: block;
     padding-top: 0;
     &-list {
             display: flex;
@@ -21,4 +24,5 @@
         align-items: center;
         justify-content: center;
     }
+}
 }
