--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,23 +1,49 @@
 .clients-list {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+    
+
+    @media screen and (max-width: 767px) {
+        flex-basis: calc((100% - 100px) / 2);
+    }
+    @media screen and (max-width: 1199px) {
+        flex-basis: calc((100% - 60px) / 3);
+    }
+    @media screen and (min-width: 1200px) {
+        margin-top: 50px;
+    }
     &__item {
             display: flex;
         }
+
 }
 
 .client-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
+    width: 210px;
     height: 92px;
-    margin-top: 50px;
-    color: #afb1b8;
+    color:#afb1b8;
     border: 1px solid currentColor;
     border-radius: 4px;
     fill: currentColor;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    // @media screen and (min-width: 768px) {
+    //         width: 226px;
+    //         }
+
+    @media screen and (min-width: 1200px) {
+        width: 170px;
+    }
+
+    @media screen and (max-width: 479px) {
+        width: 150px;
+    }
     &:hover, &:focus {
         color: var(--hover-color);
     }
