--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,13 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 1199px) {
+  .modal-window {
+    width: 450px;
+    height: 609px;
+    overflow: scroll;
+  }
+}
 .modal__close {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -241,14 +248,14 @@ img {
   position: relative;
 }
 
-.modal .icon {
+.icon {
   position: absolute;
   top: 11px;
   left: 12px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal .icon-check {
+.icon-check {
   display: inline-block;
   border: 2px solid var(--main-title);
   cursor: pointer;
@@ -262,8 +269,15 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.check-line {
-  margin: 10px 20px;
+@media screen and (max-width: 1199px) {
+  .check-line {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .check-line {
+    margin: 10px 20px;
+  }
 }
 
 .checkbox-agree:checked + .icon-check {
@@ -305,6 +319,11 @@ img {
   margin: 20px 130px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (max-width: 1199px) {
+  .order-button {
+    margin: 20px 80px;
+  }
 }
 
 .header {
