--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -26,6 +26,17 @@
         border-radius: 4px;
         transform: translate(-50%, -50%) scale(1);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        @media screen and (max-width: 1199px) {
+            width: 450px;
+            height: 609px;
+            // padding: 40px 10px;
+            overflow: scroll;
+        }
+
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+
+        }
     }
     &__close {
         display: flex;
@@ -95,7 +106,7 @@
     position: relative;
 }
 
-.modal
+
 
 .icon {
     position: absolute;
@@ -119,7 +130,13 @@
 
 
 .check-line {
-    margin: 10px 20px;
+    @media screen and (max-width: 1199px) {
+        font-size: 12px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin: 10px 20px;
+    }
+    
 }
 
 .checkbox-agree:checked+.icon-check {
@@ -154,4 +171,8 @@
     cursor: pointer;
     margin: 20px 130px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    @media screen and (max-width: 1199px) {
+        margin: 20px 80px;
+    }
 }
