--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,12 @@
 h1,
 h2,
 h3,
+h4,
+h5,
+h6,
 p,
 ul {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
@@ -143,6 +146,7 @@ img {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  z-index: 3;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -360,10 +364,6 @@ img {
           align-items: center;
 }
 
-.mobile-open {
-  overflow: hidden;
-}
-
 @media screen and (max-width: 767px) {
   .header-nav.container {
     margin: 0 auto 0 15px;
@@ -380,6 +380,7 @@ img {
   display: flex;
   padding-left: 0px;
   margin-right: auto;
+  margin-left: 87px;
 }
 @media screen and (max-width: 767px) {
   .header-nav__list {
@@ -390,6 +391,11 @@ img {
     margin-top: 24px;
     margin-left: 40px;
     margin-bottom: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-nav__list {
+    margin-left: 92px;
   }
 }
 
@@ -613,7 +619,7 @@ img {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 1;
     -webkit-transform: translateX(0);
             transform: translateX(0);
     -webkit-transition: -webkit-transform 400ms ease-out;
@@ -630,7 +636,7 @@ img {
   }
 }
 
-.header-mobile .mobile__social-list {
+.mobile__social-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -641,7 +647,7 @@ img {
   row-gap: 20px;
 }
 @media screen and (min-width: 768px) {
-  .header-mobile .mobile__social-list {
+  .mobile__social-list {
     display: none;
   }
 }
@@ -717,7 +723,6 @@ img {
   padding-bottom: 118px;
   margin: 0 auto;
   max-width: 1600px;
-  height: 400px;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/overlay/phone.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/overlay/phone.jpg);
   background-size: cover;
@@ -772,7 +777,6 @@ img {
   .overlay {
     padding-top: 200px;
     padding-bottom: 200px;
-    height: 600px;
   }
 }
 .overlay__title {
@@ -782,7 +786,7 @@ img {
   line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin: 0 auto 30px auto;
+  margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
   .overlay__title {
@@ -799,6 +803,7 @@ img {
 .overlay__button {
   background-color: var(--hover-color);
   color: var(--white);
+  margin-top: 42px;
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
