--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -6,7 +6,6 @@
     padding-bottom: 118px;
     margin: 0 auto;
     max-width: 1600px;
-    height: 400px;
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
@@ -58,7 +57,7 @@
     @media screen and (min-width: 1200px) {
         padding-top: 200px;
         padding-bottom: 200px;
-        height: 600px;
+        
     }
     &__title {
             color: var(--white);
@@ -67,7 +66,7 @@
             line-height: 1.62;
             letter-spacing: 0.06em;
             text-transform: uppercase;
-            margin: 0 auto 30px auto;
+            margin: 0 auto;
             @media screen and (min-width: 768px) {
                 width: 396px;
             }
@@ -81,6 +80,7 @@
     &__button {
         background-color: var(--hover-color);
         color: var(--white);
+        margin-top: 42px;
         cursor: pointer;
         font-weight: 700;
         font-size: 16px;
