--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -118,6 +118,7 @@
 .subscribe {
     @media screen and (min-width: 1200px) {
         margin-left: 93px;
+        width: 100%;
     }
     
     &-mail {
@@ -133,11 +134,13 @@
             transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
             @media screen and (max-width: 1199px) {
-                    width: 450px;
+                width: 100%;
+                max-width: 450px;
                 }
 
             @media screen and (min-width: 1200px) {
-                width: 358px;
+                width: 100%;
+                min-width: 358px;
             }
     
             &:hover,
@@ -151,7 +154,7 @@
         justify-content: center;
         align-items: center;
         margin-top: 20px;
-        width: 200px;
+        min-width: 200px;
         height: 50px;
         background-color: var(--hover-color);
         color: var(--white);
@@ -169,7 +172,10 @@
             margin-left: 12px;
         }
     }
-  
+
+    &-label {
+        width: 100%;
+    } 
     
     &-div {
         display: flex;
@@ -177,6 +183,7 @@
         justify-content: center;
         text-align: center;
         align-items: center;
+        // width: 100%;
         @media screen and (min-width: 1200px) {
             flex-direction:row;
         }
